jesses new stuff

--- a/index.html
+++ b/index.html
@@ -17,14 +17,49 @@
     <link rel="stylesheet" href="css/type.css">
   
   </head>
+
+  <style>
+
+h1 {
+font-size: 63px;
+color: #303344;
+letter-spacing: 0.04px;
+line-height: 76px;
+}
+
+</style>
+
+
+
   <body>
 
 
     
     
+<div class="row">
+    <div class="col-6">
 
 
-<h1>Promantus</h1>
+<h1 class="text-center">Promantus</h1>
+
+<div class="card" style="width: 18rem;">
+  <img class="card-img-top" src="img/img.jpg" alt="Card image cap">
+  <div class="card-body">
+    <h5 class="card-title">Card title</h5>
+    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    <a href="#" class="btn btn-primary">Go somewhere</a>
+  </div>
+</div>
+
+
+    </div>
+
+    <div class="col-6">
+
+        <h1 class="text-center">Promantus</h1>
+
+    </div>
+</div>
 
 
 
